# leafslug

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  flake.nix
.github/: labeler.yml
.github/workflows/: audit-on-push.yml  cargo-audit.yml  cargo-build.yml  cargo-clippy.yml  cargo-deny.yml  cargo-fmt.yml  cargo-outdated.yml  cargo-pants.yml  cargo-test.yml  cargo-udep.yml  cd.yaml  release.yml
.sqlx/: query-05d6be7c3c54f44bcfc39082562cbca310b50c8a28690a4db577592956ce3fc6.json  query-1a854b6173d38a7f6ac245b7a9df0f164390c9e48cd71f874f1a351f95300d79.json  query-2bb7153b4fc57c4527e264d0ebfd9a4640c44e2d4f4770eb46fee9d1aebd5169.json  query-73ee241942dc6a20b52a91d6bd84f4b3487140bca37809c9d5f3e92acfdb75de.json  query-c8eee2c979cb86fe8ad0db15cddd1084969d18ce372789315bb094de4fe94034.json
migrations/: 20230806163148_create_ingredient.sql  20230808163556_create_tables.sql
src/: conf.rs  domain.rs  http.rs  lib.rs  main.rs  persistence.rs  web.rs
src/domain/: food.rs  ingrediants.rs  lifestyle.rs  restrictions.rs  tags.rs
src/http/: routes.rs
src/http/routes/: health_check.rs
src/persistence/: crud.rs  ingredients.rs
src/web/: error.rs  routes.rs
src/web/routes/: health_check.rs  login.rs
tests/: quick_dev.rs
