[package]
name = "leafslug"
description = "Leafslug is an application to help happy hippies find food."
version = "0.1.5"
edition = "2021"
authors = ["Perma <prma.dev@protonmail.com>", "Pegah <pegah760.pk@gmail.com>"]
homepage = "https://github.com/prmadev/leafslug"
repository = "https://github.com/prmadev/leafslug"
license = "MPL-2.0"
readme = "README.md"

categories = ["command-line-utilities"]
keywords = ["vegan", "vegetarian", "local-first"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "leafslug"

[package.metadata.git-cliff.git]
conventional_commits = true
split_commits = true
filter_unconventional = true

[dependencies]
async-trait = "0.1.72"
axum = "0.6.20"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "time"] }
thiserror = "1.0.44"
time = { version = "0.3.25", features = ["local-offset"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "test-util"] }
tokio-macros = "2.1.0"
tracing = "0.1.37"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
