[package]
name = "leafslug"
description = "Leafslug is an application to help happy hippies find food."
version = "0.2.0"
edition = "2021"
authors = ["Perma <prma.dev@protonmail.com>", "Pegah <pegah760.pk@gmail.com>"]
homepage = "https://github.com/prmadev/leafslug"
repository = "https://github.com/prmadev/leafslug"
license = "MPL-2.0"
readme = "README.md"

categories = ["command-line-utilities"]
keywords = ["vegan", "vegetarian", "local-first"]

[features]
local = []

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "leafslug"

[package.metadata.git-cliff.git]
conventional_commits = true
split_commits = true
filter_unconventional = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.72"
axum = { version = "0.6.20", features = ["http2"] }
figment = { version = "0.10.10", features = ["env", "toml"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "time"] }
thiserror = "1.0.44"
time = { version = "0.3.25", features = ["local-offset"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "test-util", "macros"] }
tokio-macros = "2.1.0"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = "0.3.17"

[dev-dependencies]
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "time", "migrate"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
